Outliner - Select Hierarchy not working #56758

Closed
opened 2018-09-11 15:22:21 +02:00 by Marcus Papathoma · 3 comments

System Information
Windows 10 Pro

Blender Version
Broken: blender-2.80.0 29c2c307f6 windows64
Worked: 2.79b

Short description of error
Outliner right click "Select Hierarchy" not working.

Exact steps for others to reproduce the error
Open the attached *.blend.
In the Outliner Right Click the Empty.
Select "Select Hierarchy" in the popup menu.
Nothing happens. Working in Blender 2.79b

select_hierarchy.blend

**System Information** Windows 10 Pro **Blender Version** Broken: blender-2.80.0 29c2c307f6e windows64 Worked: 2.79b **Short description of error** Outliner right click "Select Hierarchy" not working. **Exact steps for others to reproduce the error** Open the attached *.blend. In the Outliner Right Click the Empty. Select "Select Hierarchy" in the popup menu. Nothing happens. Working in Blender 2.79b [select_hierarchy.blend](https://archive.blender.org/developer/F4664971/select_hierarchy.blend)

Added subscriber: @machieb

Added subscriber: @machieb
Bastien Montagne self-assigned this 2018-09-12 14:52:23 +02:00

This issue was referenced by 0d0e8979ab

This issue was referenced by 0d0e8979abfccadd8336b0e612efc008ce1b79c3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56758
No description provided.