FIx T56758: Outliner - Select Hierarchy not working.

Reversed logical check on object's visibility...